--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.4.0",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
+    "lottie-react": "^2.4.0",
     "next": "13.4.19",
     "nodemailer": "^6.9.4",
     "postcss": "8.4.28",
